--- a/pages/messagePage/messagePage.css
+++ b/pages/messagePage/messagePage.css
@@ -1,6 +1,5 @@
 .my-page-container{
     font-size: 34rpx;
-    margin: 0 10rpx;
 }
 .icon-container {
     display: flex;
@@ -30,19 +29,28 @@
 }
 .body-bottom {
     position: fixed;
-    bottom: 15rpx;
-    height: 30rpx;
+    height: 80rpx;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin: 10rpx 5rpx;
+    border: 1px solid #66cccc;
+    padding-top: 10rpx;
 }
 .body-bottom view {
     width: 100rpx;
-    background-color: #929191;
-    color: #ffffff;
+    color: #999999;
     line-height: 30rpx;
     text-align: center;
-    padding: 10rpx 20rpx;
     height: 30rpx;
+    font-size: 24rpx;
+}
+.body-bottom .current-page {
+    color: #66cccc;
+}
+.body-bottom .tosubmit-smt-icon {
+    width: 40rpx;
+    height: 40rpx;
+    background-color: #66cccc;
+    border: 20rpx;
 }
