--- a/pages/myPage/myPage.css
+++ b/pages/myPage/myPage.css
@@ -1,16 +1,15 @@
 .my-page-container{
     font-size: 28rpx;
-    margin: 0 10rpx;
 }
 .name-image {
     width: 80rpx;
     height: 80rpx;
     border-radius: 40rpx;
-    background-color: #ffcccc;
+    background-color: #66cccc;
 }
 .user-name-guanzhu-container {
     display: flex;
-    margin: 10rpx 10rpx;
+    margin: 30rpx 10rpx 30rpx;
     align-items: center;
 }
 .username-words {
@@ -27,56 +26,72 @@
     margin-right: 6rpx;
 }
 .power-reply-tie-container {
-    border: 1rpx solid #929292;
+    box-shadow: 0 0 10rpx -1rpx #66cccc;
     border-radius: 20rpx;
+    margin: 20rpx 10rpx 30rpx;
+    padding: 20rpx;
 }
 .power-container, .power-container-icons {
     margin: 10rpx 20rpx;
-    border-bottom: 1rpx solid #929292;
-    padding-bottom: 10rpx;
 }
 .power-container-icons {
     border: none;
     display: flex;
     justify-content: space-between;
     padding-top: 10rpx;
+    padding-bottom: 20rpx;
 }
-.smt-icon-left {
-    margin-left: 10rpx;
+.my-tiez {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.smt-icon-test {
-    margin-left: 30rpx;
+.my-tiez-round {
+    width: 80rpx;
+    height: 80rpx;
+    border-radius: 40rpx;
+    background-color: #d8d3d3;
 }
 .setting-area-container {
     margin-top: 20rpx;
+    margin: 20rpx 10rpx;
 }
 .setting-area-container view {
     display: flex;
 }
 .setting-element-container {
-    border-bottom: 1px solid #929292;
     padding: 15rpx;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20rpx;
 }
 .setting-element-container .smt-icon-test {
     margin-top: 4rpx;
 }
 .body-bottom {
     position: fixed;
-    bottom: 15rpx;
-    height: 30rpx;
+    height: 80rpx;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin: 10rpx 5rpx;
+    border: 1px solid #66cccc;
+    padding-top: 10rpx;
 }
 .body-bottom view {
     width: 100rpx;
-    background-color: #929191;
-    color: #ffffff;
+    color: #999999;
     line-height: 30rpx;
     text-align: center;
-    padding: 10rpx 20rpx;
     height: 30rpx;
+    font-size: 24rpx;
+}
+.body-bottom .current-page {
+    color: #66cccc;
+}
+.body-bottom .tosubmit-smt-icon {
+    width: 40rpx;
+    height: 40rpx;
+    background-color: #66cccc;
+    border: 20rpx;
 }
