--- a/pages/submitArticle/submitArticle.css
+++ b/pages/submitArticle/submitArticle.css
@@ -13,7 +13,8 @@
     font-size: 26rpx;
 }
 .to-submit-area {
-    font-size: 30rpx;
+    font-size: 28rpx;
+    color: #575656;
     font-weight: 500;
 }
 .top-cancel-submit-container {
