--- a/pages/myPage/myPage.css
+++ b/pages/myPage/myPage.css
@@ -77,6 +77,7 @@
     width: 100%;
     border: 1px solid #66cccc;
     padding-top: 10rpx;
+    background-color: #ffffff;
 }
 .body-bottom view {
     width: 100rpx;
